# final-codebase-memobot

./: .gitignore  ARCHITECTURE.md  README.md  USER_MANUAL.md  Untitled  agent.py  convert_to_pdf.py  debug.md  delete_pinecone_embeddings.py  main.py  persons.db  pyproject.toml  requirement_combine.txt  requirements.txt  requirements_local.txt  robo_client.py  setup.py  vertex_ai_service_account.json  voiceprints.json
backend/: config.py
backend/api/: main.py
backend/db/: models.py
backend/schemas/: video.py
backend/services/: video_embedding.py
backend/workers/: tasks.py
code_db/: README.md  __init__.py  core.py  test_core.py
deepface/: db_embeddings.pkl
evaluation/: qa.json  run_supermemory.py
ingest_pipeline/: README.md  ingest_pipeline.py  main.py  process_video.py  vector_db.py
ingest_pipeline/deepface/: match_face.py
memobot/: __init__.py  persons.db  voiceprints.json
memobot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
memobot/deepface/: db_embeddings.pkl  match_face.py
memobot/ingest_pipeline/: add_robot_voiceprint.py  main.py  process_video.py  vector_db.py
memobot/query_pipeline/: README.md  agent.py  gemini_client.py  live_api_client.py  main.py  oai_client.py  query.py  recognize_user.py  robo_client.py
memobot/robot/: README.md  __init__.py  autonomous_walk.py  (+29 more)
memobot_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
onboarding/: create_new_person.py  database.py  persons.db
query_pipeline/: README.md  main.py  mock_memory_storage.py  recognize_user.py  robo_client.py
robot/: README.md  get_image_on_nao_push2mac.py  laptop_audio_pull.py  mac_master.py  mac_master_v2.py  mac_master_v3.py  mac_master_v4.py  memobot_streamer.py  mock_audio_client.py  nao_audio_client.py  nao_audio_server.py  nao_image_server.py  robot_master.py
sdk/: client.py
tests/: delete_nodes.py  retrieve_report.json  test_audio_denoise.py  test_data.json  test_gemini_key.sh  test_memobot_service_build_and_retrieve.py  test_microphone_input.py  test_output.json
utils/: database.py  main.py
(+43 files in other folders)
